' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Entity

package @nestjs/mongoose {
  class "function Schema() : PropertyDecorator" as Schema
  class "function Prop() : PropertyDecorator" as Prop
}

package mongoose {
  class Document
}

package chips.entity {
  class "type ChipsDocument = Chips & Document<>" as ChipsDocument
  hide ChipsDocument circle

  ChipsDocument ..> Chips
  ChipsDocument .right.> Document

  class Chips

  Chips .right.> Schema
  Chips .right.> Prop

  Chips ..> ChipsTyp

  enum ChipsTyp {
    KARKARTOFFEL 
    SUESSKARTOFFEL 
    GEMUESE 
    LINSE
  }

  class Chips <<entity>> <<@Schema>> {
    + @Prop produktname: string
    + @Prop geschmack: string
    + @Prop typ: ChipsTyp
    + @Prop bestand: number
    + @Prop preis: number
    + @Prop rabatt?: number
    + @Prop lieferbar?: boolean
    + @Prop schlagwoerter?: string[]
  }
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
